--- a/static/app/buyers.html
+++ b/static/app/buyers.html
@@ -22,10 +22,10 @@
             <div class="col-3">
               <div  id="sidebar">
                 <ul>
-                  <li><a href="#">Farmers</a></li>
-                  <li><a href="#">Stores</a></li>
-                  <li><a href="#">Buyers</a></li>
-                  <li><a href="#">Enquries</a></li>
+                  <li><a href="farmers.html">Farmers</a></li>
+                  <li><a href="stores.html">Stores</a></li>
+                  <li><a href="buyers.html">Buyers</a></li>
+                  <li><a href="enquires.html">Enquries</a></li>
                 </ul>
               </div>  
             </div>
