--- a/static/app/buyers.html
+++ b/static/app/buyers.html
@@ -25,7 +25,7 @@
                   <li><a href="farmers.html">Farmers</a></li>
                   <li><a href="stores.html">Stores</a></li>
                   <li><a href="buyers.html">Buyers</a></li>
-                  <li><a href="enquires.html">Enquries</a></li>
+                  <li><a href="enquries.html">Enquries</a></li>
                 </ul>
               </div>  
             </div>
